--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
-{{% extends 'base.html' %}}
+{% extends 'base.html' %}
 
-{{% block head %}} 
+{% block head %}
 <title>Home</title>
-{{% endblock %}}
+{% endblock %}
 
-{{% block body %}} 
+{% block body %} 
 <h1>Home Page</h1>
-{{% endblock %}}
+{% endblock %}
