--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Home</title>
+<link rel="stylesheet" href="/static/css/main.css">
+<title>GAP's List</title>
 {% endblock %}
 
 {% block body %} 
 <h1>Home Page</h1>
+<hr>
+<p>Marketplace Instructions:</p>
 {% endblock %}
