--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,27 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<link rel="stylesheet" href="/static/css/main.css">
 <title>GAP's List</title>
 {% endblock %}
 
 {% block body %} 
 <h1>Home Page</h1>
 <hr>
-<p>Marketplace Instructions:</p>
+<p>Marketplace Instructions:</p><br>
+<p>We provide services to Buy and Sell</p>
+<ul>
+    <li>Electronics</li>
+    <li>Furniture</li>
+    <li>Clothing</li>
+    <li>Books</li>
+    <li>Sports Gear</li>
+</ul>
+<p>
+    If you are just browsing, have fun! You must have an account
+    with us if you want to buy or sell products for quality assurance
+    purposes.
+</p>
+<button>
+    Buyer Tab</button>
+<button>Seller Tab</button>
 {% endblock %}
