--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,17 @@
 <title>GAP's List</title>
 {% endblock %}
 
-{% block body %} 
+{% block body %}
+<nav class="navbar navbar-expand-sm bg-light justify-content-center">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="buy">Buy</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Sell</a>
+      </li>
+    </ul>
+  </nav>
 <h1>Home Page</h1>
 <hr>
 <p>Marketplace Instructions:</p><br>
