--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,11 @@
         <a class="nav-link" href="buy">Buy</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sell</a>
+        <a class="nav-link" href="sell">Sell</a>
       </li>
     </ul>
   </nav>
+
 <h1>Home Page</h1>
 <hr>
 <p>Marketplace Instructions:</p><br>
@@ -31,7 +32,7 @@
     with us if you want to buy or sell products for quality assurance
     purposes.
 </p>
-<button>
-    Buyer Tab</button>
-<button>Seller Tab</button>
+<p>Click the buttons at the top of the page if you want to
+    buy or sell an item.
+</p>
 {% endblock %}
