--- a/templates/buyerTab.html
+++ b/templates/buyerTab.html
@@ -34,4 +34,6 @@
 
 <input type = "text" id = "choice" placeholder="Search Products"
 onkeydown="display(event)">
+
+<a href="/"><input type="button" value="Back"></a>
 {%endblock%}
