--- a/templates/sellerTab.html
+++ b/templates/sellerTab.html
@@ -6,4 +6,9 @@
 
 {%block body%}
 <h1>Sell Tab</h1>
+
+<input type = "text" id = "choice" placeholder="Search Your Products"
+onkeydown="display(event)">
+
+<a href="/"><input type="button" value="Back"></a>
 {%endblock%}
