changed html text

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>GAP's List</title>
+
 {% endblock %}
 
 {% block body %}
@@ -16,9 +16,16 @@
     </ul>
   </nav>
 
-<h1>Home Page</h1>
-<hr>
-<p>Marketplace Instructions:</p><br>
+<h1>GAP's List</h1>
+<hr><br>
+<p>
+  Welcome to GAP's List! This application allows college
+  students in the local area around Stevens Institute of Technology
+  to buy and sell items related to academics, dormitories,
+  and campus life.
+</p>
+<br>
+<p><strong>Marketplace Instructions:</strong></p>
 <p>We provide services to Buy and Sell</p>
 <ul>
     <li>Electronics</li>
