added html pages

--- a/templates/buyerTab.html
+++ b/templates/buyerTab.html
@@ -12,7 +12,7 @@
 {%endblock%}
 
 {%block body%}
-<h1>Buy Tab</h1>
+<h1>Buyer Tab</h1>
 
 <!-- <input type="text" id="searchBar" onkeyup="searchProducts()" placeholder="Search Concept">
 <ul id="list">
@@ -35,5 +35,5 @@
 <input type = "text" id = "choice" placeholder="Search Products"
 onkeydown="display(event)">
 
-<a href="/"><input type="button" value="Back"></a>
+<a href="/"><input type="button" value="Return to Marketplace"></a>
 {%endblock%}
