--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="{{url_for('static', filename='js/main.js')}}"></script>
     <title>GAP's List</title>
+    <link rel='shortcut icon' href='#'>
     {% block head %} {% endblock %}
 </head>
 <body>
