--- a/templates/sellerTab.html
+++ b/templates/sellerTab.html
@@ -7,8 +7,9 @@
 {%block body%}
 <h1>Sell Tab</h1>
 
-<input type = "text" id = "choice" placeholder="Search Your Products"
-onkeydown="display(event)">
+<!--<input type = "text" id = "choice" placeholder="Search Your Products"
+onkeydown="display(event)"> -->
+<a href="/sell/post"><input type="button" value="Post an item to the Marketplace"></a>
 
-<a href="/"><input type="button" value="Back"></a>
+<a href="/"><input type="button" value="Return to Marketplace"></a>
 {%endblock%}
