Added some styling

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,41 +5,34 @@
 {% endblock %}
 
 {% block body %}
-<nav class="navbar navbar-expand-sm bg-light justify-content-center">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="buy">Buy</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="sell">Sell</a>
-      </li>
-    </ul>
-  </nav>
 
-<h1>GAP's List</h1>
-<hr><br>
-<p>
-  Welcome to GAP's List! This application allows college
-  students in the local area around Stevens Institute of Technology
-  to buy and sell items related to academics, dormitories,
-  and campus life.
-</p>
-<br>
-<p><strong>Marketplace Instructions:</strong></p>
-<p>We provide services to Buy and Sell</p>
-<ul>
-    <li>Electronics</li>
-    <li>Furniture</li>
-    <li>Clothing</li>
-    <li>Books</li>
-    <li>Sports Gear</li>
-</ul>
-<p>
-    If you are just browsing, have fun! You must have an account
-    with us if you want to buy or sell products for quality assurance
-    purposes.
-</p>
-<p>Click the buttons at the top of the page if you want to
-    buy or sell an item.
-</p>
+<div class = "content">
+  <h1 class = "text-center">Welcome to GAP's List</h1>
+  <hr><br>
+  <p>
+    Welcome to GAP's List! This application allows college
+    students in the local area around Stevens Institute of Technology
+    to buy and sell items related to academics, dormitories,
+    and campus life.
+  </p>
+  <br>
+  <p><strong>Marketplace Instructions:</strong></p>
+  <p>We provide services to Buy and Sell</p>
+  <ul>
+      <li>Electronics</li>
+      <li>Furniture</li>
+      <li>Clothing</li>
+      <li>Books</li>
+      <li>Sports Gear</li>
+  </ul>
+  <p>
+      If you are just browsing, have fun! You must have an account
+      with us if you want to buy or sell products for quality assurance
+      purposes.
+  </p>
+  <p>Click the buttons at the top of the page if you want to
+      buy or sell an item.
+  </p>
+</div>
+
 {% endblock %}
