--- a/templates/postItem.html
+++ b/templates/postItem.html
@@ -15,7 +15,7 @@
 <h1>Create a Listing</h1>
 
 
-<form method="POST" action="/sell/post/confirmation">
+<form class = "content" method="POST" action="/sell/post/confirmation">
 &emsp; Confirm Product Type: <input type="text" id="prodTyp" name="prodTyp">
 <br>
 <br>
