--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,46 @@
     <script src="{{url_for('static', filename='js/main.js')}}"></script>
     <title>GAP's List</title>
     <link rel='shortcut icon' href='#'>
+    <style>
+        body {
+          background-color: #eca1a6;
+          background-repeat: no-repeat;
+          background-size: cover;
+          background-position: center;
+          background-attachment: fixed;
+        }
+        .navbar-color {
+            background-color: transparent;
+        }
+        .navbar-nav > li{
+            padding-left:30px;
+            padding-right:30px;
+        }
+        .content {
+            background: white;
+            padding: 35px;
+            border-radius: 20px;
+        }
+    </style>
     {% block head %} {% endblock %}
 </head>
 <body>
+    <nav class="navbar navbar-expand-sm navbar-color">
+        <a class = "navbar-brand" href = "/"><img src = "https://web.stevens.edu/news/newspoints/brand-logos/2020/Circular/Stevens-Circular-Logo-2020_4C.png" alt = "Stevens Logo" style = "width:50px;height:40px;"></a>
+        <div class = "collapse navbar-collapse" id = "navbarNav">
+            <ul class="navbar-nav">
+                <li class = "nav-item">
+                    <a class = "nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="buy">Buy</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="sell">Sell</a>
+                </li>
+            </ul>
+        </div>
+      </nav>
     {% block body %} {% endblock %}
 </body>
 </html>
