--- a/templates/postItem.html
+++ b/templates/postItem.html
@@ -71,7 +71,7 @@
     &emsp;Enter Weight: <input type="text" id="weight" name="weight">
     <br>
     <br>
-{% elif typ == "Furntiture" %}
+{% elif typ == "Furniture" %}
     &emsp;Enter Type: <input type="text" id="type" name="type">
     <br>
     <br>
