--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,28 @@
             padding: 35px;
             border-radius: 20px;
         }
+        input:focus {
+            border: 3px solid #555;
+        }
+        .indent {
+            margin-left: 50px;
+        }
+        .listing {
+            float: left;
+            height: 470px;
+            width: 23%;
+            padding: 0 10px;
+        }
+        .list-name {
+            font-size: large;
+        }
+        .list-margin {
+            margin-left: 20px;
+        }
+        .list-background {
+            display: table;
+            background-color: white;
+        }
     </style>
     {% block head %} {% endblock %}
 </head>
