--- a/templates/itemList.html
+++ b/templates/itemList.html
@@ -12,19 +12,19 @@
 {%endblock%}
 
 {%block body%}
-<h1>Search Results</h1>
+<h1 class = "indent">Search Results</h1>
 
 {% for item in lst %}
 <p>
 <br>
+&emsp;<span class = "list-background"><a href = '{{ url_for('displayItem', _id = item['_id'])}}'><div class = "list-name list-margin">{{item['Name']}}</div></div></a>
+&emsp;&emsp;&emsp;&emsp; <div class = "list-margin">Price: ${{item['Price']}}</div>
+&emsp; <div class = "list-margin">Description: {{item['Description']}}</div>
+&emsp;<div class = "list-margin">Type of Product: {{item['Type']}}</div>
 <br>
-&emsp;<a href = '{{ url_for('displayItem', _id = item['_id'])}}'>{{item['Name']}}</a>
-&emsp;&emsp;&emsp;&emsp; Price: ${{item['Price']}}<br>
-&emsp;Description: {{item['Description']}}<br>
-&emsp;Type of Product: {{item['Type']}}
 <br>
-<br>
-&emsp;--------------------------------------------------------
+</span>
+&emsp;<div>--------------------------------------------------------</div>
 </p>
 {% endfor %}
 
