Finished item view

--- a/templates/postItem.html
+++ b/templates/postItem.html
@@ -16,8 +16,7 @@
 
 
 <form method="POST" action="/sell/post/confirmation">
-&emsp; Confirm Product Type: <input type="text" id="prodTyp" name="prodTyp">
-<br>
+&emsp;Product Type: <input type='text' id='prodTyp' name='prodTyp' value="{{typ}}">
 <br>
 &emsp;Enter Product Name: <input type="text" id="name" name="name">
 <br>
@@ -78,7 +77,7 @@
     &emsp;Enter Color: <input type="text" id="color" name="color">
     <br>
     <br>
-    &emsp;Enter Dimensions:<br>
+    &emsp;Enter Dimensions (Please include units):<br>
     &emsp;Length: <input type="text" id="l" name="l"><br>
     &emsp;Width: <input type="text" id="w" name="w"><br>
     &emsp;Height: <input type="text" id="h" name="h">
