--- a/templates/base.html
+++ b/templates/base.html
@@ -63,10 +63,10 @@
                     <a class = "nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="buy">Buy</a>
+                    <a class="nav-link" href="/buy">Buy</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="sell">Sell</a>
+                    <a class="nav-link" href="/sell">Sell</a>
                 </li>
             </ul>
         </div>
