--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -7,6 +7,19 @@
 {%block body%}
 <h1>{{item[0]['Name']}}</h1> <br>
 <p>Price: ${{item[0]['Price']}}</p> <br>
-<p>{{item[0]['Description']}}</p>
+<p>{{item[0]['Description']}}</p><br>
+
+{% for detail in item[0]['Product Details'] %}
+
+{% if detail == 'Dimensions' %}
+<p>Length: {{item[0]['Product Details']['Dimensions']['Length']}}</p>
+<p>Width: {{item[0]['Product Details']['Dimensions']['Width']}}</p>
+<p>Height: {{item[0]['Product Details']['Dimensions']['Height']}}</p><br>
+
+{% else %}
+<p>{{detail}}: {{item[0]['Product Details'][detail]}}</p> <br>
+{%endif%}
+
+{%endfor%}
 
 {%endblock%}
