--- a/templates/itemList.html
+++ b/templates/itemList.html
@@ -1,4 +1,4 @@
-dftrg{% extends 'base.html' %}
+{% extends 'base.html' %}
 
 {% block head %}
 <style>
@@ -28,6 +28,9 @@ dftrg{% extends 'base.html' %}
 &emsp;<div>--------------------------------------------------------</div>
 </p>
 {% endfor %}
+{% if lst|length == 0 %}
+<h5>Sorry, there were no results for {{keyword}} in {{typ}}</h5>
+{%endif%}
 
 <a href="/buy"><input type="button" value="Return to Buyer Tab"></a>
 
