--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,10 @@
             display: table;
             background-color: white;
         }
+        .image-size {
+            width: 50px;
+            height: 50px;
+        }
     </style>
     {% block head %} {% endblock %}
 </head>
