--- a/templates/base.html
+++ b/templates/base.html
@@ -47,13 +47,35 @@
         .list-margin {
             margin-left: 20px;
         }
-        .list-background {
-            display: table;
-            background-color: white;
+        .image-size-list {
+            width: 200px;
+            height: 150px;
         }
-        .image-size {
-            width: 50px;
-            height: 50px;
+        .image-size-view {
+            width: 500px;
+            height: 350px;
+        }
+        .myImage {
+            display: flex;
+            align-items: center;
+            justify-content: left;
+            margin-left: 40px;
+        }
+        .img-text {
+            font-size: 15px;
+            margin-left: 20px;
+        }
+        .product-info {
+            color: green;
+        }
+        .image {
+            flex-basis: 40%;
+        }
+        .product-name {
+            font-size: 40px;
+        }
+        .small-indent {
+            margin-left: 15px;
         }
     </style>
     {% block head %} {% endblock %}
