--- a/templates/sellerTab.html
+++ b/templates/sellerTab.html
@@ -5,11 +5,12 @@
 {%endblock%}
 
 {%block body%}
-<h1>Sell Tab</h1>
-
+<div class = "list-margin">
+<h1>Post Goods Here</h1>
+<p>Click on the <span class = "font-weight-bold">dropdown menu</span> below to pick what kind of product you will be putting up for sale.</p>
+</div>
 <!--<input type = "text" id = "choice" placeholder="Search Your Products"
 onkeydown="display(event)"> -->
-<br>
 <br>
 <form method= "POST" action="/sell/post">
 &emsp;Select a Type of product to post:
