--- a/templates/itemList.html
+++ b/templates/itemList.html
@@ -17,14 +17,15 @@
 {% for item in lst %}
 <p>
 <br>
-&emsp;<span class = "list-background"><a href = '{{ url_for('displayItem', _id = item['_id'])}}'><div class = "list-name list-margin">{{item['Name']}}</div></div></a>
-&emsp;<img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class ="image-size">
+<div class = "content-box list-background">
+&emsp;<a href = '{{ url_for('displayItem', _id = item['_id'])}}'><div class = "list-name list-margin product-name">{{item['Name']}}</div></a>
+&emsp;<a href = '{{ url_for('displayItem', _id = item['_id'])}}'><img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class ="image-size-list"></a>
 &emsp;&emsp;&emsp;&emsp; <div class = "list-margin">Price: ${{item['Price']}}</div>
 &emsp; <div class = "list-margin">Description: {{item['Description']}}</div>
 &emsp;<div class = "list-margin">Type of Product: {{item['Type']}}</div>
 <br>
 <br>
-</span>
+</div>
 &emsp;<div>--------------------------------------------------------</div>
 </p>
 {% endfor %}
