--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -5,9 +5,9 @@
 {%endblock%}
 
 {%block body%}
-<h1>Confirmation</h1>
+<h1 class = "indent">Confirmation</h1>
 
-<p>&emsp;Confirmation Code: {{str_res}}</p>
+<p class = "list-margin">&emsp;Confirmation Code: {{str_res}}</p>
 <br>
 &emsp;<a href="/sell"><input type="button" value="Return to Seller Tab"></a>
 {% endblock %}
