--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/sell">Sell</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/">View Cart</a>
+                </li>
             </ul>
         </div>
       </nav>
