--- a/templates/base.html
+++ b/templates/base.html
@@ -97,6 +97,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">View Cart</a>
                 </li>
+                <li class='nav-item'>
+                    <a class='nav-link' href='/login'>Login</a>
+                </li>
+                <li class='nav-item'>
+                    <a class='nav-link' href='/create'>Create Account</a>
+                </li>
             </ul>
         </div>
       </nav>
