--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                     <a class="nav-link" href="/sell">Sell</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/">View Cart</a>
+                    <a class="nav-link" href="/cart">View Cart</a>
                 </li>
                 <li class='nav-item'>
                     <a class='nav-link' href='/login'>Login</a>
