--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
           background-attachment: fixed;
         }
         .navbar-color {
-            background-color: transparent;
+            background-color: black;
         }
         .navbar-nav > li{
             padding-left:30px;
