updated buyerTab and listings list

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,14 @@
     <link rel='shortcut icon' href='#'>
     <style>
         body {
-          background-color: #eca1a6;
+          background-color: #fdfdfd;
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
           background-attachment: fixed;
         }
         .navbar-color {
-            background-color: black;
+            background-color: rgb(129, 28, 28);
         }
         .navbar-nav > li{
             padding-left:30px;
@@ -81,7 +81,7 @@
     {% block head %} {% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-color">
+    <nav class="navbar navbar-expand-sm navbar-color navbar-dark">
         <a class = "navbar-brand" href = "/"><img src = "https://web.stevens.edu/news/newspoints/brand-logos/2020/Circular/Stevens-Circular-Logo-2020_4C.png" alt = "Stevens Logo" style = "width:50px;height:40px;"></a>
         <div class = "collapse navbar-collapse" id = "navbarNav">
             <ul class="navbar-nav">
