--- a/templates/itemList.html
+++ b/templates/itemList.html
@@ -12,27 +12,38 @@
 {%endblock%}
 
 {%block body%}
-<h1 class = "indent">Search Results</h1>
+<br>
+<h1 class = "indent"><center>Search Results</center></h1>
 
 {% for item in lst %}
-<p>
-<br>
-<div class = "content-box list-background">
-&emsp;<a href = '{{ url_for('displayItem', _id = item['_id'])}}'><div class = "list-name list-margin product-name">{{item['Name']}}</div></a>
-&emsp;<a href = '{{ url_for('displayItem', _id = item['_id'])}}'><img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class ="image-size-list"></a>
-&emsp;&emsp;&emsp;&emsp; <div class = "list-margin">Price: ${{item['Price']}}</div>
-&emsp; <div class = "list-margin">Description: {{item['Description']}}</div>
-&emsp;<div class = "list-margin">Type of Product: {{item['Type']}}</div>
-<br>
-<br>
-</div>
-&emsp;<div>--------------------------------------------------------</div>
-</p>
+<center>
+    <div class="container">
+        <div class = "card mt-5" style="width:800px">
+            <div class="row no-gutters">
+                <div class="col-sm-5">
+                    <a href = '{{ url_for('displayItem', _id = item['_id'])}}'>
+                    <img src="data:image/jpeg;base64,{{ item['Image'] }}" alt="img_data"  id="imgslot" class ="img-size-list card-img"></a>
+                </div>
+                <div class="col-sm-7">
+                    <div class = "card-body">
+                        &emsp;<a href = '{{ url_for('displayItem', _id = item['_id'])}}'><div class = "list-name list-margin product-name">{{item['Name']}}</div></a>
+                        &emsp;&emsp;&emsp;&emsp; <div class = "list-margin">Price: ${{item['Price']}}</div>
+                        &emsp; <div class = "list-margin">Description: {{item['Description']}}</div>
+                        &emsp;<div class = "list-margin">Type of Product: {{item['Type']}}</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</center>
 {% endfor %}
 {% if lst|length == 0 %}
 <h5>Sorry, there were no results for {{keyword}} in {{typ}}</h5>
 {%endif%}
-
-<a href="/buy"><input type="button" value="Return to Buyer Tab"></a>
+<br>
+<br>
+&emsp;<a href="/buy"><input type="button" value="Return to Buyer Tab"></a>
+<br>
+<br>
 
 {%endblock%}
