some more UI updates

--- a/templates/buyerTab.html
+++ b/templates/buyerTab.html
@@ -73,5 +73,7 @@ onkeydown="display(event)">
 <h5><center>Sorry, there were no results for '{{keyword}}' in {{typ}}</center></h5>
 {%endif%}
 
-&emsp;<a href="/"><input type="button" value="Return to Marketplace"></a>
+<br>
+<center><a href="/"><input type="button" value="Return to Marketplace"></a></center>
+<br><br>
 {%endblock%}
