--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -28,9 +28,10 @@
 
         {%endfor%}
     </div>
-    <form action = '{{ url_for('displayItem', _id = item['_id'])}}' method="POST">
-        <input type = 'hidden' name = "objectID" value ='{{item['_id']}}' />
-        <button type = 'submit'>Add To Cart</button>
-    </form>
 </div>
+<br>
+<form action = '{{ url_for('displayItem', _id = item['_id'])}}' method="POST">
+    <input type = 'hidden' name = "objectID" value ='{{item['_id']}}' />
+    &emsp;<button type = 'submit'>Add To Cart</button>
+</form>
 {%endblock%}
