--- a/templates/buyerTab.html
+++ b/templates/buyerTab.html
@@ -50,7 +50,7 @@ onkeydown="display(event)">
 {% for item in lst %}
 <center>
     <div class="container">
-        <div class = "card mt-5" style="width:800px">
+        <div class = "card mt-5 border-primary rounded-lg" style="width:800px">
             <div class="row no-gutters">
                 <div class="col-sm-5">
                     <a href = '{{ url_for('displayItem', _id = item['_id'])}}'>
