reroute to login when adding to cart with no account

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,4 +12,5 @@
 <input type='text' name='password' placeholder="Password"/> <br> <br>
 <button type='submit'>Login</button>
 </form>
+<button onclick="window.location.href = '/create'">Create</button>
 {% endblock %}
