--- a/templates/base.html
+++ b/templates/base.html
@@ -95,10 +95,10 @@
                     <a class="nav-link" href="/cart">View Cart</a>
                 </li>
                 <li class='nav-item'>
-                    <a class='nav-link' href='/login'>Login</a>
+                    <a class='nav-link' href='/account'>Account</a>
                 </li>
                 <li class='nav-item'>
-                    <a class='nav-link' href='/create'>Create Account</a>
+                    <a class='nav-link' href='/logout'>Logout</a>
                 </li>
             </ul>
         </div>
