--- a/templates/buyerTab.html
+++ b/templates/buyerTab.html
@@ -66,6 +66,10 @@ onkeydown="display(event)">
                 </div>
             </div>
         </div>
+        <!--<form action='/r', method = 'POST'>
+            <input type = 'hidden' name = "itemID" value ="{{item['_id']}}" />
+            <button type='submit'>Remove</button>
+        </form>-->
     </div>
 </center>
 {% endfor %}
