--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -25,8 +25,8 @@
         {% else %}
         <p>{{detail}}: {{item['Product Details'][detail]}}</p> <br>
         {%endif%}
-
         {%endfor%}
+        <p>Seller: {{item['Seller']}}</p>
     </div>
 </div>
 <br>
