--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,22 @@
 {% endblock %}
 
 {% block body %}
-<h3>Log in to your Account</h3>
 <form action='/login' method='POST' enctype="multipart/form-data">
-<input type='text' name='username' placeholder="Username"/> <br> <br>
-<input type='text' name='password' placeholder="Password"/> <br> <br>
-<button type='submit'>Login</button>
+<center><div class='container-md'>
+    <br>
+    <h3>Log in to your Account</h3>
+    <br> <br>
+    <div class="form-group">
+        <label for='username'>Username:</label>
+        <input type='text' name='username' id= 'username' placeholder="Username"/>
+    </div> 
+    <div class="form-group">
+        <label for='password'>Password:</label>
+        <input type='text' name='password' id='password' placeholder="Password"/>
+    </div> 
+        <button class="btn btn-primary" type='submit'>Login</button>
+</div></center>
 </form>
-<button onclick="window.location.href = '/create'">Create</button>
+<br>
+<center><button class="btn btn-secondary" onclick="window.location.href = '/create'">Create Account</button></center>
 {% endblock %}
